--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,25 +1,23 @@
   <h2>
-    boilerplate
-    <span class="label label-success">alpha2</span>
+    fhem
+    <span class="label label-success"></span>
   </h2>
 
-  <div ng-include="partial('navbar-top')" />
+  <!-- <div ng-include="partial('navbar-top')" /> -->
 
-  <div class="well">
-      <p>You now have</p>
-      <ul>
-          <li>HTML5 Boilerplate</li>
-          <li>Twitter Bootstrap v3.0.0</li>
-          <li>RequireJS</li>
-          <li>jQuery 1.9x</li>
-          <li>angularjs-1.2.0-rc2</li>
-      </ul>
-      <p>as well as basic configurations for</p>
-      <ul>
-          <li>Grunt</li>
-          <li>Bower</li>
-          <li>jshint</li>
-      </ul>
-      <p>to get you started.</p>
-      <h3>Enjoy coding!</h3>
-  </div>
+  <form role="form">
+    <div class="form-group">
+      <label for="">Arbeitszimmer <span class="label label-success">{{fhem.heizung_az.valve}}%</span></label>
+      <input
+        type="range"
+        min="0" max="100"
+        class="form-control"
+        ng-model="fhem.heizung_az.valve"
+        ng-change="push( 'heizung_az', fhem.heizung_az.valve )"
+      />
+    </div>
+  </form>
+
+
+<pre>{{ fhem | json }}</pre>
+
